Resolve Daphne issue in watch-and-reload.

--- a/app/core/static/core/css/hoseColors.css
+++ b/app/core/static/core/css/hoseColors.css
@@ -14,7 +14,7 @@
 }
 
 .hose-wp {
-    background-color: #343A40;
+    background-color: #6e767e;
     color: #FFFFFF;
     padding: 0.25em 0.5em;
     border-radius: 0.25em;
@@ -42,7 +42,7 @@
 }
 
 .hose-msr {
-    background-color: #FFC107;
+    background-color: #ffee07;
     color: #111111;
     padding: 0.25em 0.5em;
     border-radius: 0.25em;
@@ -63,7 +63,7 @@
 }
 
 .hose-teak-sealer {
-    background-color: #6C757D;
+    background-color: #ffa600;
     color: #FFFFFF;
     padding: 0.25em 0.5em;
     border-radius: 0.25em;
