--- a/app/prodverse/templates/prodverse/productionschedule.html
+++ b/app/prodverse/templates/prodverse/productionschedule.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="{% static 'core\kpkhomescrico.png' %}">
     <link rel="apple-touch-icon" href="{% static 'core\kpkhomescrico.png' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'prodverse/css/productionSchedule.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/hoseColors.css' %}">
     <script type="module" src="{% static 'prodverse/js/pageModules/productionSchedule.js'%}"></script>
 {% endblock scripts %}
 
