--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,18 +8,8 @@
   {% if user.is_authenticated %}
     Hi {{ user.first_name }}!
     <br><br>
-    {% if user.is_staff%}
-      <div class="card mb-4">
-        <div class="card-header bg-primary text-white">
-          <h4>New Features</h4>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Interactive 3D Navigation</h5>
-          <a href="{% url 'nav3d:interface' %}" class="btn btn-success">
-            <i class="fas fa-cube"></i> Launch 3D Navigation
-          </a>
-        </div>
-      </div>
+    {% if user.is_staff or user.username == 'kkeyes' %}
+      {% include 'core/blendmanagerhome.html' %}
     {% endif %}
     {% comment %} <a class="btn btn-secondary" href="/core/forklift-checklist">Create New Forklift Log</a> {% endcomment %}
   {% else %}
