update specsheet pdf placeholder to itemcode + ' '

--- a/app/prodverse/templates/prodverse/specsheet.html
+++ b/app/prodverse/templates/prodverse/specsheet.html
@@ -147,7 +147,7 @@
             <th class="h2 align-middle" colspan="5">{{ item_description }}</th>
             <th></th>
             <th ></th>
-            <th class="h2 align-middle" style="text-align: right;">{{ item_code }}</th>
+            <th class="h2 align-middle" id="itemcode" style="text-align: right;">{{ item_code }}</th>
         </tr>
         </thead>
         
