--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -51,7 +51,7 @@
                 </tr>
             </thead>
             {% for item in current_page.object_list %}
-                <tr class="{{item.line}}Row">
+                <tr class="{{item.line}}Row" {% if item.schedule_id %}data-schedule-entry-id="{{ item.schedule_id }}"{% endif %}>
                     {% if user.is_staff %}<td class='text-center'>
                         <input type="checkbox" itemcode={{ item.item_code }} name={{ item.id }} class="rowCheckBox checkbox"></input>
                     </td>{% endif %}
@@ -129,7 +129,7 @@
                             {{ item.sage_entered_date|date:"M d, Y" }}
                         {% endif %}
                     </td>
-                    <td class="text-center">
+                    <td class="text-center blend-sheet-status-cell">
                         {% if item.last_blend_sheet_print_event %}
                             <span class="blend-sheet-status"
                                   data-record-id="{{ item.id }}"
@@ -143,7 +143,7 @@
                                 {% endif %}
                             </span>
                         {% else %}
-                            <span class="blend-sheet-status" data-has-been-printed="false">
+                            <span class="blend-sheet-status" data-record-id="{{ item.id }}" data-has-been-printed="false">
                                 <em>Not Printed</em>
                             </span>
                         {% endif %}
