Revert "anchors away (pdf download trick for spec sheets)"
This reverts commit 08c20a6878d8ead4a761a636878a3fedf5a65f94. because it prbly isn't needed

--- a/app/prodverse/templates/prodverse/specsheet.html
+++ b/app/prodverse/templates/prodverse/specsheet.html
@@ -346,7 +346,7 @@
     </div>
   </div>
 
-  <button id="savePdf" class="btn btn-primary">Save as PDF</button>
+  <button id="savePdf">Save as PDF</button>
 
 {% endblock content %}
 <!-- End Body -->
